--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,23 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: devops-app
+  name: node-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: devops-app
+      app: node-app
   template:
     metadata:
       labels:
-        app: devops-app
+        app: node-app
     spec:
       containers:
-      - name: devops-app
-        image: IMAGE
+      - name: node-app
+        image: your-dockerhub-username/node-app:latest
         ports:
         - containerPort: 3000
-        resources:
-          limits:
-            memory: "256Mi"
-            cpu: "500m"
