--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: node-app
-        image: your-dockerhub-username/node-app:latest
+        image: 13694568/node-app:latest
         ports:
         - containerPort: 3000
