--- a/k8s/package.json
+++ b/k8s/package.json
@@ -5,5 +5,8 @@
     "scripts": {
         "start": "node index.js",
         "test": "echo \"No tests yet\""
+    },
+    "dependencies": {
+        "pg": "^8.11.3"
     }
 }
